@@ -1,4 +1,5 @@
 package service.sience.controller.pubication.test;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
@@ -16,69 +17,68 @@ import org.junit.Test;
 @FixMethodOrder(MethodSorters.JVM)
 @RunWith(SpringJUnit4ClassRunner.class)
 @ContextConfiguration("file:src/main/webapp/WEB-INF/applicationContext.xml")
-public class PublicationTest { 
-	@Autowired 
+public class PublicationTest {
+	@Autowired
 	ServicePublication servicePublication;
-	
+
 	@Autowired
 	DaoPublication dao;
-    
+
 	@Test
-    public void testInsertPublication() {
-    	
-    	Publication temp = new Publication();
+	public void testInsertPublication() {
 
-		for(int i=0; i<10; i++){
-			
-		   	temp.setId(Long.valueOf(i));
-	    	servicePublication.save(temp);
-	    	assertNotNull(temp);
-			
+		Publication temp = new Publication();
+
+		for (int i = 0; i < 10; i++) {
+
+			temp.setId(Long.valueOf(i));
+			servicePublication.save(temp);
+			assertNotNull(temp);
+
 		}
-    }
-	
-	 	@Test
-		public void testUpdatePublication() {
-    	
-    	Publication temp = new Publication();
+	}
 
-		for(int i=0; i<10; i++){
-			
-		   	temp.setId(Long.valueOf(i));
-	    	servicePublication.save(temp);
-			
-		} 
-    }
-	
-	 	@Test
-	    public void testFindAllPublications() {
-		   List<Publication> publicationTemp = servicePublication.findAll();
-	     	   assertNotNull(publicationTemp.toString());
-	    }
+	@Test
+	public void testUpdatePublication() {
 
-	 	@Test
-	    public void findByIdPublication() {
-	    	Random generator = new Random();
-	    	Publication publicationTemp = new Publication();
-	    	
-	        publicationTemp = servicePublication.findById(Long.valueOf(generator.nextInt(9)));
-	        assertNotNull(publicationTemp);
+		Publication temp = new Publication();
 
-	    }
-	    
-	 	@Test
-	    public void deleteRecordTestPublication() {
-	    	Publication publicationTemp = new Publication();
-	    	
-		    for(int i=0; i<10; i++){
-		    	dao.delete(new Long(i));	
-		    }
-		    
-		    for(int i=0; i<10; i++){
-		    	publicationTemp =  servicePublication.findById(new Long(i));
-		    	assertNull(publicationTemp);
-		    }
-		    
-		    
-	    }
+		for (int i = 0; i < 10; i++) {
+
+			temp.setId(Long.valueOf(i));
+			servicePublication.save(temp);
+
+		}
+	}
+
+	@Test
+	public void testFindAllPublications() {
+		List<Publication> publicationTemp = servicePublication.findAll();
+		assertNotNull(publicationTemp.toString());
+	}
+
+	@Test
+	public void findByIdPublication() {
+		Random generator = new Random();
+		Publication publicationTemp = new Publication();
+
+		publicationTemp = servicePublication.findById(Long.valueOf(generator.nextInt(9)));
+		assertNotNull(publicationTemp);
+
+	}
+
+	@Test
+	public void deleteRecordTestPublication() {
+		Publication publicationTemp = new Publication();
+
+		for (int i = 0; i < 10; i++) {
+			dao.delete(new Long(i));
+		}
+
+		for (int i = 0; i < 10; i++) {
+			publicationTemp = servicePublication.findById(new Long(i));
+			assertNull(publicationTemp);
+		}
+
+	}
 }
